exports[`test Renders properly when authenticated 1`] = `
<Grid>
  <Cell
    col={4}
    tablet={12}>
    <Connect(CurrentUserCrew)
      sex="male" />
  </Cell>
  <Cell
    desktop={8}
    desktopOffset={0}
    tablet={12}
    tabletOffset={0}>
    <Connect(CrewList)
      sex="male" />
  </Cell>
</Grid>
`;

exports[`test Renders properly when not authenticated 1`] = `
<Grid>
  <Cell
    desktop={8}
    desktopOffset={2}
    tablet={12}
    tabletOffset={0}>
    <Connect(CrewList)
      sex="female" />
  </Cell>
</Grid>
`;
